--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     implementation group: 'org.json', name: 'json', version: '20210307'
     implementation group: 'commons-io', name: 'commons-io', version: '2.9.0'
+    implementation 'mysql:mysql-connector-java:8.0.32'
+
 
 
 }
